# evelstar-invoices-app

./: README.md  pyproject.toml
invoices_app/: __init__.py  __main__.py
invoices_app/api/: __init__.py  client.py  firebase.py  models.py
invoices_app/views/: login_window.py
