[tool.poetry]
name = "evelstar-invoices-app"
version = "0.1.0"
description = ""
authors = ["David Sn <divad.nnamtdeis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
httpx = "^0.28.1"
pillow = "^11.1.0"
pyjwt = "^2.10.1"
pdf2image = "^1.17.0"
beautifulsoup4 = "^4.13.3"
azure-ai-formrecognizer = "^3.3.3"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
